[package]
name = "gitmio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
log = "0.4.29"
env_logger = "0.11.9"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
actix-extensible-rate-limit = "=0.4.0"
